--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@babel/plugin-transform-runtime": "7.18.2",
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.17.12",
-    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "13.3.0",
     "@types/jest": "28.1.1",
     "babel-loader": "8.2.5",
@@ -40,6 +40,7 @@
     "webpack-dev-server": "4.9.2"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.5.1",
     "axios": "^1.5.0",
     "cors": "2.8.5",
     "express": "4.18.1",
